--- a/JavaCampus/src/main/resources/templates/index.html
+++ b/JavaCampus/src/main/resources/templates/index.html
@@ -133,15 +133,68 @@
   <!-- Page Content -->
   <div class="container">
 
-    <h1 class="my-4">Welcome to Modern Business</h1>
+    <h1 class="my-4">Welcome to JavaCampus and DevLec</h1>
 
     <!-- Marketing Icons Section -->
     <div class="row">
       <div class="col-lg-4 mb-4">
         <div class="card h-100">
-          <h4 class="card-header">Card Title</h4>
+          <h4 class="card-header">Java 기초</h4>
           <div class="card-body">
-            <p class="card-text">Lorem ipsum dolor sit amet, consectetur adipisicing elit. Sapiente esse necessitatibus neque.</p>
+            <p class="card-text">
+              <ul>
+                <li>
+                  <a href="http://www.devlec.com/?_pageVariable=MAIN_S&_courseName=JAVA" target="_blank">Java 프로그래밍 기초</a>
+                </li>
+                <li>
+                  <a href="http://www.devlec.com/?_pageVariable=MAIN_S&_courseName=JAVA" target="_blank">Java OOP 프로그래밍</a>
+                </li>
+                <li>
+                  <a href="http://www.devlec.com/?_pageVariable=MAIN_S&_courseName=JAVA" target="_blank">Java OOP 프로젝트</a>
+                </li>
+                <li>
+                  <a href="http://www.devlec.com/?_pageVariable=MAIN_S&_courseName=JAVA" target="_blank">Java 게임 미니 프로젝트</a>
+                </li>
+                <li>
+                  <a href="http://www.devlec.com/?_pageVariable=MAIN_S&_courseName=JAVA" target="_blank">Java 테트리스 프로젝트</a>
+                </li>
+                <li>
+                  <a href="http://www.devlec.com/?_pageVariable=MAIN_S&_courseName=JAVA" target="_blank">안드로이드 게임 앱 프로그래밍</a>
+                </li>
+              </ul>
+            </p>
+          </div>
+          <div class="card-footer">
+            <a href="http://www.devlec.com/?_pageVariable=MAIN_S&_courseName=JAVA" target="_blank" class="btn btn-primary">Learn More</a>
+          </div>
+        </div>
+      </div>
+      <div class="col-lg-4 mb-4">
+        <div class="card h-100">
+          <h4 class="card-header">JSP(Java Server Pages)</h4>
+          <div class="card-body">
+            <p class="card-text">
+              <ul>
+                <li>
+                  <a href="http://www.devlec.com/?_pageVariable=MAIN_S&_courseName=JSP" target="_blank">JSP 웹프로그래밍 기초</a>
+                </li>
+                <li>
+                  <a href="http://www.devlec.com/?_pageVariable=MAIN_S&_courseName=JSP" target="_blank">JDBC</a>
+                </li>
+                <li>
+                  <a href="http://www.devlec.com/?_pageVariable=MAIN_S&_courseName=JSP" target="_blank">기본형 게시판</a>
+                </li>
+                <li>
+                  <a href="http://www.devlec.com/?_pageVariable=MAIN_S&_courseName=JSP" target="_blank">파일 업로드 및 다운로드</a>
+                </li>
+                <li>
+                  <a href="http://www.devlec.com/?_pageVariable=MAIN_S&_courseName=JSP" target="_blank">게시판 페이징</a>
+                </li>
+                <li>
+                  <a href="http://www.devlec.com/?_pageVariable=MAIN_S&_courseName=JSP" target="_blank">답변형 게시판</a>
+                </li>
+              </ul>
+            </p>
           </div>
           <div class="card-footer">
             <a href="#" class="btn btn-primary">Learn More</a>
@@ -150,20 +203,30 @@
       </div>
       <div class="col-lg-4 mb-4">
         <div class="card h-100">
-          <h4 class="card-header">Card Title</h4>
+          <h4 class="card-header">Spring과 Spring Boot</h4>
           <div class="card-body">
-            <p class="card-text">Lorem ipsum dolor sit amet, consectetur adipisicing elit. Reiciendis ipsam eos, nam perspiciatis natus commodi similique totam consectetur praesentium molestiae atque exercitationem ut consequuntur, sed eveniet, magni nostrum sint fuga.</p>
-          </div>
-          <div class="card-footer">
-            <a href="#" class="btn btn-primary">Learn More</a>
-          </div>
-        </div>
-      </div>
-      <div class="col-lg-4 mb-4">
-        <div class="card h-100">
-          <h4 class="card-header">Card Title</h4>
-          <div class="card-body">
-            <p class="card-text">Lorem ipsum dolor sit amet, consectetur adipisicing elit. Sapiente esse necessitatibus neque.</p>
+            <p class="card-text">
+              <ul>
+                <li>
+                  <a href="http://www.devlec.com/?_pageVariable=MAIN_S&_courseName=STRUTS" target="_blank">스프링 기초</a>
+                </li>
+                <li>
+                  <a href="http://www.devlec.com/?_pageVariable=MAIN_S&_courseName=STRUTS" target="_blank">스프링 활용</a>
+                </li>
+                <li>
+                  <a href="http://www.devlec.com/?_pageVariable=MAIN_S&_courseName=STRUTS" target="_blank">스프링 MVC</a>
+                </li>
+                <li>
+                  <a href="http://www.devlec.com/?_pageVariable=MAIN_S&_courseName=STRUTS" target="_blank">스프링 REST</a>
+                </li>
+                <li>
+                  <a href="http://www.devlec.com/?_pageVariable=MAIN_S&_courseName=STRUTS" target="_blank">스프링 게시판</a>
+                </li>
+                <li>
+                  <a href="http://www.devlec.com/?_pageVariable=MAIN_S&_courseName=STRUTS" target="_blank">스프링 쇼핑몰</a>
+                </li>
+              </ul>
+            </p>
           </div>
           <div class="card-footer">
             <a href="#" class="btn btn-primary">Learn More</a>
