--- a/JavaCampus/src/main/resources/templates/index.html
+++ b/JavaCampus/src/main/resources/templates/index.html
@@ -95,27 +95,43 @@
         <li data-target="#carouselExampleIndicators" data-slide-to="0" class="active"></li>
         <li data-target="#carouselExampleIndicators" data-slide-to="1"></li>
         <li data-target="#carouselExampleIndicators" data-slide-to="2"></li>
+        <li data-target="#carouselExampleIndicators" data-slide-to="3"></li>
       </ol>
       <div class="carousel-inner" role="listbox">
-        <!-- Slide One - Set the background image for this slide in the line below -->
-        <div class="carousel-item active" style="background-image: url('http://placehold.it/1900x1080')">
+        <div class="carousel-item active" style="background-image: url('/images/Banners-01.png')">
           <div class="carousel-caption d-none d-md-block">
-            <h3>First Slide</h3>
-            <p>This is a description for the first slide.</p>
+            <h3>Spring Boot</h3>
+            <p>
+              이 사이트는 Spring Boot를 사용하여 제작되었습니다.<br />
+              <a class="btn btn-link text-white" href="https://spring.io">Learn More</a>
+            </p>
           </div>
         </div>
-        <!-- Slide Two - Set the background image for this slide in the line below -->
-        <div class="carousel-item" style="background-image: url('http://placehold.it/1900x1080')">
+        <div class="carousel-item" style="background-image: url('/images/Banners-02.png')">
           <div class="carousel-caption d-none d-md-block">
-            <h3>Second Slide</h3>
-            <p>This is a description for the second slide.</p>
+            <h3>Visual Studio Code</h3>
+            <p>
+              Visual Studio Code로 개발되었습니다.<br />
+              <a class="btn btn-link text-white" href="https://code.visualstudio.com">Learn More</a>
+            </p>
           </div>
         </div>
-        <!-- Slide Three - Set the background image for this slide in the line below -->
-        <div class="carousel-item" style="background-image: url('http://placehold.it/1900x1080')">
+        <div class="carousel-item" style="background-image: url('/images/Banners-03.png')">
           <div class="carousel-caption d-none d-md-block">
-            <h3>Third Slide</h3>
-            <p>This is a description for the third slide.</p>
+            <h3>Packages</h3>
+            <p>
+              주요 라이브러리는 Maven, NPM을 사용하여 참조하였습니다.<br />
+              <a class="btn btn-link text-white" href="https://www.nodejs.org">Learn More</a>
+            </p>
+          </div>
+        </div>
+        <div class="carousel-item" style="background-image: url('/images/Banners-04.png')">
+          <div class="carousel-caption d-none d-md-block">
+            <h3>Azure</h3>
+            <p>
+              자바캠퍼스는 Microsoft Azure에서 서비스 중입니다.<br />
+              <a class="btn btn-link text-white" href="https://www.azure.com">Learn More</a>
+            </p>
           </div>
         </div>
       </div>
