--- a/JavaCampus/src/main/resources/templates/index.html
+++ b/JavaCampus/src/main/resources/templates/index.html
@@ -38,6 +38,9 @@
           <li class="nav-item">
             <a class="nav-link" href="/contact">Contact</a>
           </li>
+          <li class="nav-item">
+            <a class="nav-link" href="/prices">Pricing</a>
+          </li>
           <li class="nav-item dropdown">
             <a class="nav-link dropdown-toggle" href="#" id="navbarDropdownPortfolio" data-toggle="dropdown" aria-haspopup="true" aria-expanded="false">
               Portfolio
@@ -365,12 +368,19 @@
   <!-- Footer -->
   <footer class="py-5 bg-dark">
     <div class="container">
-      <p class="m-0 text-center text-white">Copyright &copy; JavaCampus 2021</p>
+      <p class="m-0 text-center text-white">Copyright &copy; JavaCampus 2021 All right reserved.</p>
     </div>
-    <div class="container">
+    <!-- <div class="container">
       <p class="m-0 text-center text-white">
         <a href="https://docs.spring.io/spring-boot/docs/current-SNAPSHOT/reference/htmlsingle/">
           Spring Boot Reference Documentation
+        </a>
+      </p>
+    </div> -->
+    <div class="container">
+      <p class="m-0 text-center text-white">
+        <a href="https://startbootstrap.com/" class="text-white">
+          Bootstrap Template by Start Bootstrap
         </a>
       </p>
     </div>
