--- a/JavaCampus/src/main/resources/templates/prices/pricing.html
+++ b/JavaCampus/src/main/resources/templates/prices/pricing.html
@@ -123,7 +123,21 @@
   <!-- Footer -->
   <footer class="py-5 bg-dark">
     <div class="container">
-      <p class="m-0 text-center text-white">Copyright &copy; Your Website 2020</p>
+      <p class="m-0 text-center text-white">Copyright &copy; JavaCampus 2021 All right reserved.</p>
+    </div>
+    <!-- <div class="container">
+      <p class="m-0 text-center text-white">
+        <a href="https://docs.spring.io/spring-boot/docs/current-SNAPSHOT/reference/htmlsingle/">
+          Spring Boot Reference Documentation
+        </a>
+      </p>
+    </div> -->
+    <div class="container">
+      <p class="m-0 text-center text-white">
+        <a href="https://startbootstrap.com/" class="text-white">
+          Bootstrap Template by Start Bootstrap
+        </a>
+      </p>
     </div>
     <!-- /.container -->
   </footer>
