JavaCampus Youtube Channel Link

--- a/JavaCampus/src/main/resources/templates/index.html
+++ b/JavaCampus/src/main/resources/templates/index.html
@@ -149,6 +149,19 @@
     </div>
   </header>
 
+  <div class="container mt-4">
+    <div class="jumbotron">
+      <h1>자바캠퍼스 유튜브 채널</h1>
+      <p>
+        JavaCampus 사이트 제작에 대한 모든 내용은 자바캠퍼스 유튜브 채널을 통해서 제공하고 있습니다.
+      </p>
+      <hr />
+      <p>
+        <a class="btn btn-primary btn-lg" href="https://www.youtube.com/JavaCampus" target="_blank">JavaCampus Youtube 채널로 이동하기</a>
+      </p>
+    </div>
+  </div>
+
   <!-- Page Content -->
   <div class="container">
 
