--- a/JavaCampus/src/main/resources/templates/index.html
+++ b/JavaCampus/src/main/resources/templates/index.html
@@ -151,13 +151,13 @@
 
   <div class="container mt-4">
     <div class="jumbotron">
-      <h1>자바캠퍼스 유튜브 채널</h1>
+      <h2>자바캠퍼스 유튜브 채널</h2>
       <p>
-        JavaCampus 사이트 제작에 대한 모든 내용은 자바캠퍼스 유튜브 채널을 통해서 제공하고 있습니다.
+        JavaCampus 사이트 제작에 대한 모든 내용은 데브렉과 자바캠퍼스 유튜브 채널을 통해서 제공하고 있습니다.
       </p>
       <hr />
       <p>
-        <a class="btn btn-primary btn-lg" href="https://www.youtube.com/JavaCampus" target="_blank">JavaCampus Youtube 채널로 이동하기</a>
+        <a class="btn btn-primary btn-lg" href="https://www.youtube.com/JavaCampus" target="_blank">JavaCampus Youtube 채널로 이동</a>
       </p>
     </div>
   </div>
@@ -392,7 +392,7 @@
     </div> -->
     <div class="container">
       <p class="m-0 text-center text-white">
-        <a href="https://startbootstrap.com/" class="text-white">
+        <a href="https://startbootstrap.com/" class="text-white small">
           Bootstrap Template by Start Bootstrap
         </a>
       </p>
