--- a/JavaCampus/src/main/resources/templates/index.html
+++ b/JavaCampus/src/main/resources/templates/index.html
@@ -68,6 +68,7 @@
               Other Pages
             </a>
             <div class="dropdown-menu dropdown-menu-right" aria-labelledby="navbarDropdownPages">
+              <a class="dropdown-item" href="/pages">Pages Controller</a>
               <a class="dropdown-item" href="full-width.html">Full Width Page</a>
               <a class="dropdown-item" href="sidebar.html">Sidebar Page</a>
               <a class="dropdown-item" href="faq.html">FAQ</a>
