--- a/JavaCampus/src/main/resources/templates/views/shared/_layout.html
+++ b/JavaCampus/src/main/resources/templates/views/shared/_layout.html
@@ -106,7 +106,7 @@
     </div>
 
     <!-- Footer -->
-    <footer class="py-5 bg-dark">
+    <footer class="py-5 bg-dark" style="margin-top: 500px;">
         <div class="container">
             <p class="m-0 text-center text-white">Copyright &copy; JavaCampus 2021 All right reserved.</p>
         </div>
