--- a/JavaCampus/src/main/resources/templates/views/notices/details.html
+++ b/JavaCampus/src/main/resources/templates/views/notices/details.html
@@ -7,17 +7,13 @@
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Blank Page</title>
+    <title>Notice</title>
 </head>
-<body>    
-    
+<body>
     <div layout:fragment="content">
-
         <div class="container">
-            여기는 Blank Page입니다.
+            <h1>공지사항 들어오는 곳</h1>
         </div>
-
     </div>
-
 </body>
 </html>
