--- a/JavaCampus/src/main/resources/templates/views/employees/create.html
+++ b/JavaCampus/src/main/resources/templates/views/employees/create.html
@@ -36,7 +36,7 @@
                                 data-val-required="The LastName field is required." th:field="*{lastName}" />
                             <span class="text-danger field-validation-valid" data-valmsg-for="LastName"
                                 data-valmsg-replace="true" th:if="${#fields.hasErrors('lastName')}"
-                                th:errors="*{lastName}"></span>
+                                th:errors="*{lastName}">*</span>
                         </div>
                         <div class="form-group">
                             <label class="control-label" for="Role">Role</label>
@@ -44,7 +44,7 @@
                                 data-val-required="The Role field is required." th:field="*{role}" />
                             <span class="text-danger field-validation-valid" data-valmsg-for="Role"
                                 data-valmsg-replace="true" th:if="${#fields.hasErrors('role')}"
-                                th:errors="*{role}"></span>
+                                th:errors="*{role}">*</span>
                         </div>
                         <div class="form-group">
                             <input type="submit" value="Create" class="btn btn-primary" />
