--- a/JavaCampus/src/main/resources/templates/views/shared/_layout.html
+++ b/JavaCampus/src/main/resources/templates/views/shared/_layout.html
@@ -37,6 +37,9 @@
                         <a class="nav-link" href="/docs">Docs</a>
                     </li>
                     <li class="nav-item">
+                        <a class="nav-link" href="/employee">Employees</a>
+                    </li>
+                    <li class="nav-item">
                         <a class="nav-link" href="/about">About</a>
                     </li>
                     <li class="nav-item">
