--- a/JavaCampus/src/main/resources/templates/views/employees/create.html
+++ b/JavaCampus/src/main/resources/templates/views/employees/create.html
@@ -1,5 +1,7 @@
 <!DOCTYPE html>
-<html lang="en" xmlns:th="http://www.thymeleaf.org" xmlns:layout="http://www.ultraq.net.nz/thymeleaf/layout"
+<html lang="en" 
+    xmlns:th="http://www.thymeleaf.org" 
+    xmlns:layout="http://www.ultraq.net.nz/thymeleaf/layout"
     layout:decorate="views/shared/_layout">
 
 <head>
