--- a/JavaCampus/src/main/resources/templates/views/shared/_layout.html
+++ b/JavaCampus/src/main/resources/templates/views/shared/_layout.html
@@ -100,6 +100,9 @@
                                 target="_blank">
                                 Spring Boot Docs
                             </a>
+                            <a class="dropdown-item" href="https://mvnrepository.com/" target="_blank">
+                                MVN Repository
+                            </a>
                         </div>
                     </li>
                 </ul>
