--- a/JavaCampus/src/main/resources/templates/views/notices/index.html
+++ b/JavaCampus/src/main/resources/templates/views/notices/index.html
@@ -7,13 +7,22 @@
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Notice List</title>
+    <title>공지사항 리스트</title>
 </head>
 <body>
     <div layout:fragment="content">
         <div class="container">
 
-            <h1>공지사항</h1>
+            <h1>공지사항 리스트</h1>
+            
+            <div class="row">
+                <div class="hidden-xs col-sm-6 col-md-8">
+                    <a href="/notice/create">Create New</a>
+                </div>
+                <div class="col-xs-12 col-sm-6 col-md-4 text-right">
+
+                </div>
+            </div>
 
             <table class="table table-bordered table-hover">
                 <colgroup>
