--- a/JavaCampus/src/main/resources/templates/views/notices/create.html
+++ b/JavaCampus/src/main/resources/templates/views/notices/create.html
@@ -7,12 +7,37 @@
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Notice</title>
+    <title>공지사항 글쓰기</title>
 </head>
 <body>
     <div layout:fragment="content">
         <div class="container">
-            <h1>공지사항 들어오는 곳</h1>
+            <h1>공지사항 글쓰기</h1>
+
+            <h4>공지사항</h4>
+            <hr>
+
+            <div class="row">
+                <div class="col-md-4">
+                    <form action="#" th:action="@{/notice/save}" th:object="${dto}" method="post">
+                        <div class="form-group">
+                            <label for="name" class="control-label">Name</label>
+                            <input type="text" class="form-control" th:field="*{name}" />
+                        </div>
+                        <div class="form-group">
+                            <label for="title" class="control-label">Title</label>
+                            <input type="text" class="form-control" th:field="*{title}" />
+                        </div>
+                        <div class="form-group">
+                            <label for="content" class="control-label">Content</label>
+                            <input type="text" class="form-control" th:field="*{content}" />
+                        </div>
+                        <div class="form-group">
+                            <input type="submit" value="Create" class="btn btn-primary">
+                        </div>
+                    </form>
+                </div>
+            </div>
         </div>
     </div>
 </body>
