--- a/JavaCampus/src/main/resources/templates/views/notices/create.html
+++ b/JavaCampus/src/main/resources/templates/views/notices/create.html
@@ -22,21 +22,41 @@
                     <form action="#" th:action="@{/notice/save}" th:object="${dto}" method="post">
                         <div class="form-group">
                             <label for="name" class="control-label">Name</label>
-                            <input type="text" class="form-control" th:field="*{name}" />
+                            <input type="text" class="form-control" 
+                                th:field="*{name}" 
+                                data-val-required="이름을 입력하세요."
+                                th:classappend="${#fields.hasErrors('name')} ? 'is-invalid' : ''"
+                            />
+                            <span class="text-danger field-validation-valid"
+                                data-valmsg-for="name" data-valmsg-replace="true"
+                                th:if="${#fields.hasErrors('name')}" th:errors="*{name}"
+                            >*</span>
                         </div>
                         <div class="form-group">
                             <label for="title" class="control-label">Title</label>
-                            <input type="text" class="form-control" th:field="*{title}" />
+                            <input type="text" class="form-control" 
+                                th:field="*{title}" 
+                                data-val-required="제목을 입력하세요."
+                                th:classappend="${#fields.hasErrors('title')} ? 'is-invalid' : ''"
+                            />
+                            <span class="text-danger field-validation-valid"
+                                data-valmsg-for="title" data-valmsg-replace="true"
+                                th:if="${#fields.hasErrors('title')}" th:errors="*{title}"
+                            >*</span>
                         </div>
                         <div class="form-group">
                             <label for="content" class="control-label">Content</label>
-                            <input type="text" class="form-control" th:field="*{content}" />
+                            <!-- <input type="text" class="form-control" th:field="*{content}" /> -->
+                            <textarea class="form-control" th:field="*{content}"></textarea>
                         </div>
                         <div class="form-group">
                             <input type="submit" value="Create" class="btn btn-primary">
                         </div>
                     </form>
                 </div>
+            </div>
+            <div class="row">
+                <a href="/notice" th:href="@{/notice}">Back to List</a>
             </div>
         </div>
     </div>
