--- a/JavaCampus/src/main/resources/templates/views/notices/create.html
+++ b/JavaCampus/src/main/resources/templates/views/notices/create.html
@@ -1,14 +1,14 @@
 <!DOCTYPE html>
-<html lang="en"
-    xmlns:th="http://www.thymeleaf.org"
-    xmlns:layout="http://www.ultraq.net.nz/thymeleaf/layout" 
+<html lang="en" xmlns:th="http://www.thymeleaf.org" xmlns:layout="http://www.ultraq.net.nz/thymeleaf/layout"
     layout:decorate="views/shared/_layout">
+
 <head>
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>공지사항 글쓰기</title>
 </head>
+
 <body>
     <div layout:fragment="content">
         <div class="container">
@@ -22,27 +22,19 @@
                     <form action="#" th:action="@{/notice/save}" th:object="${dto}" method="post">
                         <div class="form-group">
                             <label for="name" class="control-label">Name</label>
-                            <input type="text" class="form-control" 
-                                th:field="*{name}" 
-                                data-val-required="이름을 입력하세요."
-                                th:classappend="${#fields.hasErrors('name')} ? 'is-invalid' : ''"
-                            />
-                            <span class="text-danger field-validation-valid"
-                                data-valmsg-for="name" data-valmsg-replace="true"
-                                th:if="${#fields.hasErrors('name')}" th:errors="*{name}"
-                            >*</span>
+                            <input type="text" class="form-control" th:field="*{name}" data-val-required="이름을 입력하세요."
+                                th:classappend="${#fields.hasErrors('name')} ? 'is-invalid' : ''" />
+                            <span class="text-danger field-validation-valid" data-valmsg-for="name"
+                                data-valmsg-replace="true" th:if="${#fields.hasErrors('name')}"
+                                th:errors="*{name}">*</span>
                         </div>
                         <div class="form-group">
                             <label for="title" class="control-label">Title</label>
-                            <input type="text" class="form-control" 
-                                th:field="*{title}" 
-                                data-val-required="제목을 입력하세요."
-                                th:classappend="${#fields.hasErrors('title')} ? 'is-invalid' : ''"
-                            />
-                            <span class="text-danger field-validation-valid"
-                                data-valmsg-for="title" data-valmsg-replace="true"
-                                th:if="${#fields.hasErrors('title')}" th:errors="*{title}"
-                            >*</span>
+                            <input type="text" class="form-control" th:field="*{title}" data-val-required="제목을 입력하세요."
+                                th:classappend="${#fields.hasErrors('title')} ? 'is-invalid' : ''" />
+                            <span class="text-danger field-validation-valid" data-valmsg-for="title"
+                                data-valmsg-replace="true" th:if="${#fields.hasErrors('title')}"
+                                th:errors="*{title}">*</span>
                         </div>
                         <div class="form-group">
                             <label for="content" class="control-label">Content</label>
@@ -61,4 +53,5 @@
         </div>
     </div>
 </body>
+
 </html>
