--- a/JavaCampus/src/main/resources/templates/views/notices/index.html
+++ b/JavaCampus/src/main/resources/templates/views/notices/index.html
@@ -48,7 +48,10 @@
                         <td th:text="${vm.name}">name</td>
                         <td>&nbsp;</td>
                         <td>
-
+                            <a href="#" th:href="@{/notice/deleteprocess(id=${vm.id})}" 
+                                class="btn btn-danger btn-sm"
+                                onclick="return window.confirm('정말로 삭제하시겠습니까?')"
+                            >Delete</a>
                         </td>
                     </tr>
                 </tbody>
