--- a/JavaCampus/src/main/resources/templates/views/notices/create.html
+++ b/JavaCampus/src/main/resources/templates/views/notices/create.html
@@ -20,6 +20,10 @@
             <div class="row">
                 <div class="col-md-4">
                     <form action="#" th:action="@{/notice/save}" th:object="${dto}" method="post">
+
+                        <!-- 숨김 필드로 id 값 전달 -->
+                        <input type="hidden" th:field="*{id}" />
+
                         <div class="form-group">
                             <label for="name" class="control-label">Name</label>
                             <input type="text" class="form-control" th:field="*{name}" data-val-required="이름을 입력하세요."
