--- a/JavaCampus/src/main/resources/templates/views/notices/index.html
+++ b/JavaCampus/src/main/resources/templates/views/notices/index.html
@@ -48,6 +48,9 @@
                         <td th:text="${vm.name}">name</td>
                         <td>&nbsp;</td>
                         <td>
+                            <a href="#" th:href="@{/notice/editform(id=${vm.id})}"
+                                class="btn btn-primary btn-sm"
+                            >Edit</a>
                             <a href="#" th:href="@{/notice/deleteprocess(id=${vm.id})}" 
                                 class="btn btn-danger btn-sm"
                                 onclick="return window.confirm('정말로 삭제하시겠습니까?')"
