--- a/JavaCampus/src/main/resources/templates/views/notices/index.html
+++ b/JavaCampus/src/main/resources/templates/views/notices/index.html
@@ -20,7 +20,15 @@
                     <a href="/notice/create">Create New</a>
                 </div>
                 <div class="col-xs-12 col-sm-6 col-md-4 text-right">
-
+                    <form action="#" th:action="@{/notice/search}" method="get">
+                        <div class="input-group mb-2">
+                            <input type="search" name="searchQuery" id="searchQuery" 
+                                class="form-control" placeholder="Search Notice" />
+                            <div class="input-group-append">
+                                <button type="submit" class="btn btn-outline-secondary">검색</button>
+                            </div>
+                        </div>
+                    </form>
                 </div>
             </div>
 
