--- a/JavaCampus/src/main/resources/templates/views/notices/details.html
+++ b/JavaCampus/src/main/resources/templates/views/notices/details.html
@@ -7,12 +7,38 @@
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Notice</title>
+    <title>공지사항 상세보기</title>
 </head>
 <body>
     <div layout:fragment="content">
         <div class="container">
-            <h1>공지사항 들어오는 곳</h1>
+
+            <h1>공지사항 상세보기</h1>
+
+            <div>
+                <h4>공지사항</h4>
+                <hr />
+                <dl class="row">
+                    <dt class="col-sm-2">Id</dt>
+                    <dd class="col-sm-10" th:text="${vm.id}">Id</dd>
+                    <dt class="col-sm-2">Name</dt>
+                    <dd class="col-sm-10" th:text="${vm.name}">Name</dd>
+                    <dt class="col-sm-2">Title</dt>
+                    <dd class="col-sm-10" th:text="${vm.title}">Title</dd>
+                    <dt class="col-sm-2">Content</dt>
+                    <!-- <dd class="col-sm-10" th:text="${vm.content}">Content</dd> -->
+                    <dd class="col-sm-10" 
+                        th:utext="${#strings.replace(vm.content, '&#10', '&lt;br /&gt;')}"
+                    >Content</dd>
+                </dl>
+            </div>
+
+            <div>
+                <a href="#" th:href="@{/notice/edit(id=${vm.id})}">Edit</a>
+                | 
+                <a href="#" th:href="@{/notice/list}">Back to List</a>
+            </div>
+
         </div>
     </div>
 </body>
