--- a/JavaCampus/src/main/resources/templates/views/notices/index.html
+++ b/JavaCampus/src/main/resources/templates/views/notices/index.html
@@ -56,6 +56,9 @@
                         <td th:text="${vm.name}">name</td>
                         <td>&nbsp;</td>
                         <td>
+                            <a href="#" th:href="@{/notice/details(id=${vm.id})}"
+                                class="btn btn-info btn-sm"
+                            >Details</a>
                             <a href="#" th:href="@{/notice/editform(id=${vm.id})}"
                                 class="btn btn-primary btn-sm"
                             >Edit</a>
