공통 레이아웃 적용

--- a/JavaCampus/src/main/resources/templates/views/shared/_layout.html
+++ b/JavaCampus/src/main/resources/templates/views/shared/_layout.html
@@ -115,7 +115,7 @@
     </div>
 
     <!-- Footer -->
-    <footer class="py-5 bg-dark" style="margin-top: 500px;">
+    <footer class="py-5 bg-dark">
         <div class="container">
             <p class="m-0 text-center text-white">Copyright &copy; JavaCampus 2022 All right reserved.</p>
         </div>
