푸터 하단 고정

--- a/JavaCampus/src/main/resources/templates/views/shared/_layout.html
+++ b/JavaCampus/src/main/resources/templates/views/shared/_layout.html
@@ -16,11 +16,13 @@
   <link href="vendor/bootstrap/css/bootstrap.min.css" rel="stylesheet" th:href="@{/vendor/bootstrap/css/bootstrap.min.css}">
 
   <!-- Custom styles for this template -->
-  <link href="css/modern-business.css" rel="stylesheet" th:href="@{/css/modern-business.css}">
+  <link href="/css/modern-business.css" rel="stylesheet" th:href="@{/css/modern-business.css}">
 
+  <!-- 사이트 공통 CSS -->
+  <link href="/css/site.css" th:href="@{/css/site.css}" rel="stylesheet" />
 </head>
 
-<body>
+<body class="d-flex flex-column min-vh-100">
 
     <!-- Navigation -->
     <nav class="navbar fixed-top navbar-expand-lg navbar-dark bg-dark fixed-top">
@@ -33,11 +35,14 @@
             </button>
             <div class="collapse navbar-collapse" id="navbarResponsive">
                 <ul class="navbar-nav ml-auto">
-                    <li class="nav-item">
+                    <!-- <li class="nav-item">
                         <a class="nav-link" href="/docs">Docs</a>
-                    </li>
+                    </li> -->
                     <li class="nav-item">
                         <a class="nav-link" href="/employee">Employees</a>
+                    </li>
+                    <li class="nav-item">
+                        <a class="nav-link" href="/notice">공지사항</a>
                     </li>
                     <li class="nav-item">
                         <a class="nav-link" href="/about">About</a>
@@ -115,7 +120,7 @@
     </div>
 
     <!-- Footer -->
-    <footer class="py-5 bg-dark">
+    <footer class="py-5 bg-dark mt-auto">
         <div class="container">
             <p class="m-0 text-center text-white">Copyright &copy; JavaCampus 2022 All right reserved.</p>
         </div>
