--- a/JavaCampus/src/main/resources/templates/views/shared/_layout.html
+++ b/JavaCampus/src/main/resources/templates/views/shared/_layout.html
@@ -122,7 +122,7 @@
     <!-- Footer -->
     <footer class="py-5 bg-dark mt-auto">
         <div class="container">
-            <p class="m-0 text-center text-white">Copyright &copy; JavaCampus 2022 All right reserved.</p>
+            <p class="m-0 text-center text-white">Copyright &copy; JavaCampus 2022 All rights reserved.</p>
         </div>
         <!-- <div class="container">
       <p class="m-0 text-center text-white">
