--- a/JavaCampus/src/main/resources/templates/views/employees/index.html
+++ b/JavaCampus/src/main/resources/templates/views/employees/index.html
@@ -2,14 +2,14 @@
 <html lang="en" 
     xmlns:th="http://www.thymeleaf.org" 
     xmlns:layout="http://www.ultraq.net.nz/thymeleaf/layout"
-    layout:decorate="views/shared/_layout">
+    layout:decorate="~{views/shared/_layout}">
 
 <head>
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Index</title>
-    <link rel="stylesheet" href="/lib/bootstrap/dist/css/bootstrap.min.css" />
+    <link rel="stylesheet" href="/lib/bootstrap/dist/css/bootstrap.min.css" th:href="@{/lib/bootstrap/dist/css/bootstrap.min.css}" />
 </head>
 
 <body>
