--- a/JavaCampus/src/main/resources/templates/views/employees/index.html
+++ b/JavaCampus/src/main/resources/templates/views/employees/index.html
@@ -2,7 +2,7 @@
 <html lang="en" 
     xmlns:th="http://www.thymeleaf.org" 
     xmlns:layout="http://www.ultraq.net.nz/thymeleaf/layout"
-    layout:decorate="~{views/shared/_layout}">
+    layout:decorate="~{:: views/shared/_layout}">
 
 <head>
     <meta charset="UTF-8">
