--- a/JavaCampus/src/main/resources/templates/views/shared/fragments/_footer.html
+++ b/JavaCampus/src/main/resources/templates/views/shared/fragments/_footer.html
@@ -1,8 +1,9 @@
 <html lagn="ko" xmlns:th="http://www.thymeleaf.org">
+
 <!-- Footer -->
 <footer class="py-5 bg-dark mt-auto" th:fragment="footer">
     <div class="container">
-        <p class="m-0 text-center text-white">Copyright &copy; JavaCampus 2022 All rights reserved.</p>
+        <p class="m-0 text-center text-white">Copyright &copy; JavaCampus 2024 All rights reserved.</p>
     </div>
     <div class="container">
         <p class="m-0 text-center text-white">
@@ -18,6 +19,7 @@
             </a>
         </p>
     </div>
-    <!-- /.container -->
 </footer>
+<!-- Footer -->
+ 
 </html>
