--- a/JavaCampus/src/main/resources/templates/greeting.html
+++ b/JavaCampus/src/main/resources/templates/greeting.html
@@ -7,6 +7,8 @@
 </head>
 
 <body>
+    <h1>Greeting</h1>
+
     <p th:text="'Hello, ' + ${name} + '!'" />
     <p th:text="|Hello, ${name}!|" />
 </body>
